--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,1 +1,36 @@
-<h3>Cart</h3>
+{% extends "store/home.html" %}
+
+{% load static %}
+
+{% block content %}
+
+        <div class="row">
+                <div class="col-lg-12">
+                <div class="boxx-elementt">
+                        <a class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Continue To Shop</a>
+
+                        <br>
+                        <br>
+                        <table class="table">
+                                <tr>
+                                        <th><h5>ITEMS:  <strong>3</strong></h5></th>
+                                        <th><h5>TOTAL:  <strong>=N=12000</strong></h5></th>
+                                        <th>
+                                        <a style="float:right:margin:5px" class="btn btn-success" href="{% url 'checkout' %}" >Checkout</a>
+                                        </th>
+                                </tr>  
+                        </table>
+                </div>
+        
+                <br>
+                <br>
+        
+                <div class="boxx-elementt">
+                        
+                </div>
+                </div>
+        </div>
+          
+
+
+{% endblock content %}
