--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,1 +1,9 @@
-<h3>Checkout</h3>
+{% extends "store/home.html" %}
+
+{% load static %}
+
+{% block content %}
+
+        <h3>Checkout</h3>
+
+{% endblock content %}
