--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,5 +1,119 @@
+{% extends "store/home.html" %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{%static 'css/main.css'%}">
-<h3>Store</h3>
 
-<img src="{%static 'images/cartoonshoppingcart.png' %}">
+{% block content %}
+    
+    <div class="row">
+
+        <div class="col-lg-4">
+            <img class="arrangingpic" src="{% static 'images/bag1.jpg' %}">
+            <div class="box-element product">
+                <h6><strong>Vendor A's Product</strong></h6>
+                <hr>
+
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>=N= 4000</strong></h4>
+
+            </div>
+        </div>
+
+
+        <div class="col-lg-4">
+            <img class="arrangingpic" src="{% static 'images/bag2.jpg' %}">
+            <div class="box-element product">
+                <h6><strong>Vendor A's Vendor A's Product</strong></h6>
+                <hr>
+
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>=N= 4000</strong></h4>
+
+            </div>
+        </div>
+
+
+        <div class="col-lg-4">
+            <img class="arrangingpic" src="{% static 'images/bag3.jpg' %}">
+            <div class="box-element product">
+                <h6><strong>Vendor A's Product</strong></h6>
+                <hr>
+
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>=N= 4000</strong></h4>
+
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <img class="arrangingpic" src="{% static 'images/bag4.jpg' %}">
+            <div class="box-element product">
+                <h6><strong>Vendor A's Product</strong></h6>
+                <hr>
+                
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>=N= 4000</strong></h4>
+                
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <img class="arrangingpic" src="{% static 'images/bag5.jpg' %}">
+            <div class="box-element product">
+                <h6><strong>Vendor A's Product</strong></h6>
+                <hr>
+
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>=N= 4000</strong></h4>
+
+            </div>
+        </div>
+
+
+        <div class="col-lg-4">
+            <img class="arrangingpic" src="{% static 'images/bag6.jpg' %}">
+            <div class="box-element product">
+                <h6><strong>Vendor A's Product</strong></h6>
+                <hr>
+
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>=N= 4000</strong></h4>
+
+            </div>
+        </div>
+
+
+        <div class="col-lg-4">
+            <img class="arrangingpic" src="{% static 'images/bag7.jpg' %}">
+            <div class="box-element product">
+                <h6><strong>Vendor A's Product</strong></h6>
+                <hr>
+
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>=N= 4000</strong></h4>
+
+            </div>
+        </div>
+
+
+        <div class="col-lg-4">
+            <img class="arrangingpic" src="{% static 'images/bag8.jpg' %}">
+            <div class="box-element product">
+                <h6><strong>Vendor A's Product</strong></h6>
+                <hr>
+
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>=N= 4000</strong></h4>
+
+            </div>
+        </div>
+
+    
+    </div>
+{% endblock content %}
