--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -26,7 +26,31 @@
                 <br>
         
                 <div class="boxx-elementt">
-                        
+                        <div class="carty-roww">
+                                <div style="flex:2"></div>
+                                <div style="flex:2"><strong>ITEMS</strong></div>
+                                <div style="flex:1"><strong>PRICE</strong></div>
+                                <div style="flex:1"><strong>QUANTITY</strong></div>
+                                <div style="flex:1"><strong>TOTAL</strong></div>
+                        </div>
+                
+                        <div class="carty-roww">
+                                <div style="flex:2"><img class="roww-imagee" src="{% static 'images/bag1.jpg' %}"></div>
+                                <div style="flex:2">Product 1</div>
+                                <div style="flex:1">N 4000.00</div>
+                                <div style="flex:1">
+                                        <p class="quantityy">2</p>
+                                        <div class="quantityy">
+                                                <img class="chg-quantityy" src="{% static  'images/arrow-up.png' %}">
+                                
+                                                <img class="chg-quantityy" src="{% static  'images/arrow-down.png' %}">
+                                        </div>
+                                </div>
+                                <div style="flex:1">N 8000.00</div>
+
+                                
+                        </div>
+
                 </div>
                 </div>
         </div>
