--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -4,6 +4,71 @@
 
 {% block content %}
 
-        <h3>Checkout</h3>
+<div class="row">
+        <div class="col-lg-6">
+                <div class="boxx-elementt" id="form-wrapper">
+                        <form id="form">
+                                <div id="user-info">
+                                        <div class="form-field">
+                                                <input required class="form-control" type="text" name="name" placeholder="Name..">
+                                        </div>
+                                        <div class="form-field">
+                                                <input required class="form-control" type="email" name="email" placeholder="Email..">
+                                        </div>
+                                </div>
+                                
+                                <div id="shipping-info">
+                                        <hr>
+                                        <p>Shipping Information:</p>
+                                        <hr>
+                                        <div class="form-field">
+                                                <input class="form-control" type="text" name="address" placeholder="Address..">
+                                        </div>
+                                        <div class="form-field">
+                                                <input class="form-control" type="text" name="city" placeholder="City..">
+                                        </div>
+                                        <div class="form-field">
+                                                <input class="form-control" type="text" name="state" placeholder="State..">
+                                        </div>
+                                        <div class="form-field">
+                                                <input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
+                                        </div>
+                                        <div class="form-field">
+                                                <input class="form-control" type="text" name="country" placeholder="Zip code..">
+                                        </div>
+                                </div>
+
+                                <hr>
+                                <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
+                        </form>
+                </div>
+
+                <br>
+
+                <div class="boxx-elementt hidden" id="payment-info">
+                        <small>Paypal Options</small>
+                </div>
+                
+        </div>
+
+        <div class="col-lg-6">
+                <div class="boxx-elementt">
+                        <a  class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
+                        <hr>
+                        <h3>Order Summary</h3>
+
+                        <hr>
+
+                        <div class="carty-roww">
+                                <div style="flex:2"><img class="roww-imagee" src="{% static 'images/bag1.jpg' %}"></div>
+                                <div style="flex:2">Product 1</div>
+                                <div style="flex:1">N4000.00</div>
+                                <div style="flex:1"><p>x2</p></div>                                
+                        </div>
+                        <h5>ITEMS:    2</h5>
+                        <h5>TOTAL:    N8000.00</h5>
+                </div>
+        </div>
+</div>
 
 {% endblock content %}
