--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -33,13 +33,14 @@
                                 <div style="flex:1"><strong>QUANTITY</strong></div>
                                 <div style="flex:1"><strong>TOTAL</strong></div>
                         </div>
-                
+
+                        {% for item in items %}
                         <div class="carty-roww">
-                                <div style="flex:2"><img class="roww-imagee" src="{% static 'images/bag1.jpg' %}"></div>
-                                <div style="flex:2">Product 1</div>
-                                <div style="flex:1">N 4000.00</div>
+                                <div style="flex:2"><img class="roww-imagee" src="{{item.product.imageURL}}"></div>
+                                <div style="flex:2">{{item.product.name}}</div>
+                                <div style="flex:1">N{{item.product.price|floatformat:"2"}}</div>
                                 <div style="flex:1">
-                                        <p class="quantityy">2</p>
+                                        <p class="quantityy">{{item.quantity}}</p>
                                         <div class="quantityy">
                                                 <img class="chg-quantityy" src="{% static  'images/arrow-up.png' %}">
                                 
@@ -50,7 +51,7 @@
 
                                 
                         </div>
-
+                        {% endfor %}
                 </div>
                 </div>
         </div>
