--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,9 @@ body{
     background-color: bisque;
 }
 
-
+.back{
+    background-image: url('../images/1.jpg');
+}
 h1,h2,h3,h4,h5,h6{
 	color:hsl(0, 0%, 30%);
 }
@@ -16,7 +18,7 @@ h1,h2,h3,h4,h5,h6{
 
 .arrangingpic{
 	width: 100%;
-	height: 400px;
+	height: 300px;
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
