--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -17,9 +17,9 @@
                 var cookieValue = null;
                 if (document.cookie && document.cookie !== '') {
                     var cookies = document.cookie.split(';');
-                    for (var i = 0; i < cookies.length; i++) {
-                        var cookie = cookies[i].trim();
-                        // Does this cookie string begin with the name we want?
+                    for (var x = 0; x < cookies.length; x++) {
+                        var cookie = cookies[x].trim();
+
                         if (cookie.substring(0, name.length + 1) === (name + '=')) {
                             cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
                             break;
@@ -28,39 +28,70 @@
                 }
                 return cookieValue;
             }
-            var csrftoken = getToken('csrftoken')
+            var csrftoken = getToken('csrftoken');
+
+            function getCookie(name) {
+                var cookieArr = document.cookie.split(";");
+
+                for(var x = 0; x < cookieArr.length; x++) {
+                    var cookiePair = cookieArr[x].split("=");
+
+                    if(name == cookiePair[0].trim()) {
+                        // Decode the cookie value and return
+                        return decodeURIComponent(cookiePair[1]);
+                    }
+                }
+    
+                // Return null if not found
+                return null;
+            }
+            var cart = JSON.parse(getCookie('cart'))
+    
+            if (cart == undefined){
+                cart = {}
+                console.log('Cart Created!', cart)
+                document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+            }
+            console.log('Cart:', cart)
+
+
         </script>
 
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'store' %}">Garden Of Edenn</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-                <!-- Move the following div to the end of the parent div -->
-                <div class="form-inline my-2 my-lg-0 ms-auto"> <!-- Add ms-auto class for margin-left:auto -->
-                    <a href="#" class="btn btn-warning mr-2">Login</a> <!-- Add mr-2 class for right margin -->
-                    <a href="{% url 'cart' %}">
-                        <img id="cart-icon" src="{% static 'images/cartoonshoppingcart.png' %}">
-                        
-                    </a>
-                    <p id="cart-total" class="ml-2">{{cartItems}}</p>
+        <div class="back">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="{% url 'store' %}">Garden Of Edenn</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'landingpage' %}">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                    <!-- Move the following div to the end of the parent div -->
+                    <div class="form-inline my-2 my-lg-0 ms-auto"> <!-- Add ms-auto class for margin-left:auto -->
+                        <a href="{% url 'login' %}" class="btn btn-warning mr-2">Login</a> <!-- Add mr-2 class for right margin -->
+                        <a href="{% url 'cart' %}">
+                            <img id="cart-icon" src="{% static 'images/cartoonshoppingcart.png' %}">
+                            
+                        </a>
+                        <p id="cart-total" class="ml-2">{{cartItems}}</p>
+                    </div>
                 </div>
+            </nav>
+            <div class="container">
+                {% block content %}
+                {% endblock content%}
             </div>
-        </nav>
-        <div class="container">
-            {% block content %}
-            {% endblock content%}
         </div>
-
+    
 
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
