--- a/store/templates/store/landingpage.html
+++ b/store/templates/store/landingpage.html
@@ -1,140 +1,33 @@
-<div class="col-lg-8">
-    <img src="{% static 'images/bag1.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Webpage Design</title>
+    <link rel="stylesheet" type="text/css" href="{%static 'css/land.css'%}">
+
+</head>
+<body>
+
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h2 class="logo">Garden Of Edenn</h2>
+            </div>
+
+            <div class="menu">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="{% url 'store' %}">STORE</a></li>
+                    <li><a href="{% url 'about' %}">ABOUT</a></li>
+                </ul>
+            </div>
+        </div> 
+        <div class="content">
+            <h1><strong>Vendors E-commerce Store</strong></h1>
+            <p class="par">Welcome to Garden of Edernn: your curated marketplace for artisanal wonders. Explore a diverse range of handcrafted treasures, from gourmet foods to stylish accessories. Each item tells a story of craftsmanship and passion 
+                <br>  Start your journey today and discover the magic of artisanal creations for every aspect of your life.
+    
     </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img src="{% static 'images/bag2.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img src="{% static 'images/bag3.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img src="{% static 'images/bag4.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img src="{% static 'images/bag5.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">a<div class="col-lg-8">
-    <img class="arrangingpic" src="{% static 'images/bag1.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img class="arrangingpic" src="{% static 'images/bag2.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img class="arrangingpic" src="{% static 'images/bag3.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-{% comment %}                     
-<div class="col-lg-8">
-    <img class="arrangingpic" src="{% static 'images/bag4.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img class="arrangingpic" src="{% static 'images/bag5.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img class="arrangingpic" src="{% static 'images/bag6.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img class="arrangingpic" src="{% static 'images/bag7.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img class="arrangingpic" src="{% static 'images/bag8.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div> {% endcomment %}
-
-    <img src="{% static 'images/bag6.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img src="{% static 'images/bag7.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
-
-
-<div class="col-lg-8">
-    <img src="{% static 'images/bag8.jpg' %}">
-    <div class="boxx-elementt product">
-        <h6><strong>Vendor A's Product</strong></h6>
-        <hr>
-    </div>
-</div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+</body>
+</html>
