--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -16,7 +16,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="{% url 'landingpage' %}">HOME</a></li>
                     <li><a href="{% url 'store' %}">STORE</a></li>
                     <li><a href="{% url 'about' %}">ABOUT</a></li>
                 </ul>
