--- a/store/templates/store/landingpage.html
+++ b/store/templates/store/landingpage.html
@@ -24,7 +24,7 @@
         </div> 
         <div class="content">
             <h1><strong>Vendors E-commerce Store</strong></h1>
-            <p class="par">Welcome to Garden of Edernn: your curated marketplace for artisanal wonders. Explore a diverse range of handcrafted treasures, from gourmet foods to stylish accessories. Each item tells a story of craftsmanship and passion 
+            <p class="par">Welcome to Garden of Edernn: your curated marketplace for artisanal wonders.<br> Explore a diverse range of handcrafted treasures, from gourmet foods to stylish accessories.<br>Each item tells a story of craftsmanship and passion 
                 <br>  Start your journey today and discover the magic of artisanal creations for every aspect of your life.
     
     </div>
