--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -77,8 +77,10 @@
 
 </head>
 <body>
+	<a class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Continue To Store</a>
+
 	<div class="container h-100">
-		{% csrf_token %}
+		
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
@@ -88,6 +90,7 @@
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="">
+						{% csrf_token %}
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
