--- a/store/templates/store/register.html
+++ b/store/templates/store/register.html
@@ -68,6 +68,7 @@
 </head>
 <body>
 	<div class="container h-100">
+		<a class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Continue To Shop</a>
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
