--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -4,6 +4,7 @@
 <head>
     <title>Webpage Design</title>
     <link rel="stylesheet" type="text/css" href="{%static 'css/land.css'%}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
 <body>
@@ -42,10 +43,24 @@
             <div class="box">
                 <img src="../images/rotimi.jpg" alt="Designer 1">
                 <h2><strong>Rotimi Olakunle Awomodu</strong></h2>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/rotimi-awomodu-b0b7b5a1/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                
+                    <a href="https://github.com/Steven-Awo" target="_blank"><i class="fab fa-github"></i></a>
+                
+                    <a href="https://twitter.com/Dark9ite166843" target="_blank"><i class="fab fa-twitter"></i></a>
+                </div>
             </div>
             <div class="box">
                 <img src="../images/rotimi.jpg" alt="Designer 1">
                 <h2><strong>Martins Okwuaku</strong></h2>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/rotimi-awomodu-b0b7b5a1/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                
+                    <a href="https://github.com/Steven-Awo" target="_blank"><i class="fab fa-github"></i></a>
+                
+                    <a href="https://twitter.com/Dark9ite166843" target="_blank"><i class="fab fa-twitter"></i></a>
+                </div>
             </div>
         </div>
         
