--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -55,11 +55,11 @@
                 <img src="../images/rotimi.jpg" alt="Designer 1">
                 <h2><strong>Martins Okwuaku</strong></h2>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/rotimi-awomodu-b0b7b5a1/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/martins-okwuaku-787214269" target="_blank"><i class="fab fa-linkedin"></i></a>
                 
-                    <a href="https://github.com/Steven-Awo" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/martinsobinna" target="_blank"><i class="fab fa-github"></i></a>
                 
-                    <a href="https://twitter.com/Dark9ite166843" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://twitter.com/martinsstanleyy" target="_blank"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
