--- a/store/templates/store/landingpage.html
+++ b/store/templates/store/landingpage.html
@@ -19,6 +19,7 @@
                     <li><a href="#">HOME</a></li>
                     <li><a href="{% url 'store' %}">STORE</a></li>
                     <li><a href="{% url 'about' %}">ABOUT</a></li>
+                    <li><a href="{% url 'cart' %}">CART</a></li>
                 </ul>
             </div>
         </div> 
