--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -41,7 +41,7 @@
 
         <div class="container11">
             <div class="box">
-                <img src="../images/rotimi.jpg" alt="Designer 1">
+                <img src="/" alt="Designer 1">
                 <h2><strong>Rotimi Olakunle Awomodu</strong></h2>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/rotimi-awomodu-b0b7b5a1/" target="_blank"><i class="fab fa-linkedin"></i></a>
