--- a/store/templates/store/landingpage.html
+++ b/store/templates/store/landingpage.html
@@ -20,6 +20,7 @@
                     <li><a href="{% url 'store' %}">STORE</a></li>
                     <li><a href="{% url 'about' %}">ABOUT</a></li>
                     <li><a href="{% url 'cart' %}">CART</a></li>
+                    <li><a href="{% url 'checkout' %}">CART</a></li>
                 </ul>
             </div>
         </div> 
